# pantry-list

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json
.claude/: launch.json
deploy/: README.md  pantry-server.service
tests/bench/: cap-compare.ts  probe-rust.ts  run.ts
tests/integration/: cookware.test.ts  fetch-recipe.test.ts  frontend.test.ts  generate-recipes.test.ts  ingredients.test.ts  kitchens.test.ts  lookup-barcode.test.ts  menus.test.ts  plu.test.ts  recipe-ics.test.ts  recipe-lifecycle.test.ts  recipes.test.ts  run.ts  settings.test.ts  smoke.test.ts  upload.test.ts  wikibooks.test.ts
tests/integration/helpers/: gql.ts  harness.ts  http.ts  mock-server.ts  reset.ts
